--- a/Day 1 Part 1- PythonBasics.ipynb
+++ b/Day 1 Part 1- PythonBasics.ipynb
@@ -27,6 +27,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1807f206",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "b07daa7e",
    "metadata": {},
    "outputs": [],
@@ -35,7 +43,7 @@
     "#Indentation refers to the spaces at the beginning of a code line. indentation in Python is very important.\n",
     "\n",
     "if 5 > 2:\n",
-    "  print(\"Five is greater than two!\")"
+    "    print(\"Five is greater than two!\")"
    ]
   },
   {
@@ -69,10 +77,19 @@
    "source": [
     "#Python Variables -  Python is an object Orientated Programming Language we store anything into objects\n",
     "\n",
-    "x = 5\n",
     "y = \"Hello, World!\"\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c3ada36e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y"
    ]
   },
   {
@@ -100,8 +117,17 @@
    "source": [
     "#Case-Sensitive  \n",
     "\n",
-    "a = 4\n",
-    "A "
+    "a = 4\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "46d1b756",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A"
    ]
   },
   {
@@ -116,6 +142,26 @@
     "#A variable name cannot start with a number\n",
     "#A variable name can only contain alpha-numeric characters and underscores (A-z, 0-9, and _ )\n",
     "#Variable names are case-sensitive \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c5da703",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "myvar = \"John\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2565cf48",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "myvar"
    ]
   },
   {
@@ -136,13 +182,41 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a4de12b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "myvar2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "836d98e1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my-var = \"John\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ac9d5d08",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my var = \"John\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "28f5f4ea",
    "metadata": {},
    "outputs": [],
    "source": [
-    "2myvar = \"John\"\n",
-    "my-var = \"John\"\n",
-    "my var = \"John\""
+    "2myvar = \"John\"\n"
    ]
   },
   {
@@ -325,8 +399,7 @@
    "outputs": [],
    "source": [
     "x = [\"apple\", \"banana\", \"cherry\"]  #list \n",
-    "type(x)\n",
-    "x"
+    "type(x)\n"
    ]
   },
   {
@@ -430,7 +503,9 @@
    "source": [
     "## calling the 'title' method which makes the first letter of every word upper\n",
     "string = \"Math is fun!\"\n",
-    "print(f\"{string.title()}\")"
+    "\n",
+    "\n",
+    "print(f\"{string}\")"
    ]
   },
   {
@@ -515,8 +590,17 @@
    "source": [
     "def my_function(fname):\n",
     "  print(fname + \" Refsnes\")\n",
-    "\n",
-    "my_function(\"Emil\")"
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f56156e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_function(\"Email\")"
    ]
   },
   {
@@ -667,11 +751,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "68901ce4",
+   "cell_type": "markdown",
+   "id": "93ee77aa",
    "metadata": {},
-   "outputs": [],
    "source": [
     "You can choose to import only parts from a module, by using the from keyword."
    ]
@@ -700,10 +782,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "9384bedd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.141592653589793"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import math as m\n",
     "m.pi"
@@ -711,13 +804,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "92ec3c18",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pi' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmath\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m pi \u001b[38;5;28;01mas\u001b[39;00m PI\n\u001b[1;32m----> 2\u001b[0m \u001b[43mpi\u001b[49m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'pi' is not defined"
+     ]
+    }
+   ],
    "source": [
     "from math import pi as PI\n",
-    "PI"
+    "pi"
    ]
   },
   {
@@ -748,10 +853,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "a9a160f7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Swift\n",
+      "Python\n",
+      "Scala\n",
+      "R \n"
+     ]
+    }
+   ],
    "source": [
     "languages = ['Swift', 'Python', 'Scala', 'R ']\n",
     "\n",
@@ -762,22 +878,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "116b25a3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Facebook\n",
+      "0.0\n",
+      "USD\n",
+      "2974676\n",
+      "3.5\n"
+     ]
+    }
+   ],
    "source": [
     "row_1 = ['Facebook', 0.0, 'USD', 2974676, 3.5]\n",
     "for element in row_1:\n",
-    "print(element)"
+    "    print(element)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "76d529b5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "red apple\n",
+      "red banana\n",
+      "red cherry\n",
+      "big apple\n",
+      "big banana\n",
+      "big cherry\n",
+      "tasty apple\n",
+      "tasty banana\n",
+      "tasty cherry\n"
+     ]
+    }
+   ],
    "source": [
     "adj = [\"red\", \"big\", \"tasty\"]\n",
     "fruits = [\"apple\", \"banana\", \"cherry\"]\n",
@@ -799,10 +943,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "f9316db6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    380\n",
+       "Name: calories, dtype: int64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -829,12 +985,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "700d6d9b",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FullArgSpec(args=['self', 'data', 'index', 'columns', 'dtype', 'copy'], varargs=None, varkw=None, defaults=(None, None, None, None, None), kwonlyargs=[], kwonlydefaults=None, annotations={'return': 'None', 'index': 'Axes | None', 'columns': 'Axes | None', 'dtype': 'Dtype | None', 'copy': 'bool | None'})\n"
+     ]
+    }
+   ],
    "source": [
     "import inspect\n",
     "print(inspect.getfullargspec(pd.DataFrame))"
@@ -842,30 +1006,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
+   "id": "bc531b4d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(data=None, index: 'Axes | None' = None, columns: 'Axes | None' = None, dtype: 'Dtype | None' = None, copy: 'bool | None' = None) -> 'None'\n"
+     ]
+    }
+   ],
+   "source": [
+    "# use signature() \n",
+    "print(inspect.signature(pd.DataFrame)) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "0f614851",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.frame.DataFrame"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "type(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "54106dc0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['calories', 'duration']"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "list(df.columns)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "1e87eab4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "calories    int64\n",
+       "duration    int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.dtypes"
    ]
@@ -906,10 +1124,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "9ede58e2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    False\n",
+       "1    False\n",
+       "2     True\n",
+       "3    False\n",
+       "4    False\n",
+       "dtype: bool"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -922,10 +1156,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "fda25d5a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     2.0\n",
+       "1     3.0\n",
+       "3     7.0\n",
+       "4    10.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#drop missing data\n",
     "\n",
@@ -934,10 +1183,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "3a55aed1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "# count missing cells\n",
     "\n",
@@ -946,10 +1203,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "3c0911a6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "# count total missing cells\n",
     "\n",
@@ -958,10 +1223,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "f4814fa4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    5\n",
+       "1    1\n",
+       "2    2\n",
+       "3    3\n",
+       "4    4\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Import modules\n",
     "import pandas as pd\n",
@@ -979,10 +1260,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "73e0dc1c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     5\n",
+       "1    40\n",
+       "2    45\n",
+       "3    40\n",
+       "Name: duration, dtype: int64"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data = {\n",
     "  \"calories\": [420, 380, 390, 380],\n",
@@ -1006,10 +1302,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "e29eea0f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.428571428571429"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from statistics import mean\n",
     "\n",
@@ -1022,10 +1329,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "8af6a188",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from statistics import median\n",
     "\n",
@@ -1038,10 +1356,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "7015fe74",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from statistics import mode\n",
     "\n",
@@ -1054,10 +1383,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "0b4779c4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7.904761904761905"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import statistics as s\n",
     "\n",
@@ -1070,10 +1410,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "8bfd6196",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.811540841738193"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x = s.stdev(data1)\n",
     "x"
@@ -1081,10 +1432,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "5ea9b28d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9929845761480398"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "experience = [1, 3, 4, 5, 5, 6, 7, 10, 11, 12, 15, 20, 25, 28, 30,35]\n",
     "\n",
